--- a/Assets/Scripts/MadKnight.asmdef
+++ b/Assets/Scripts/MadKnight.asmdef
@@ -2,7 +2,8 @@
     "name": "MadKnight",
     "rootNamespace": "MadKnight",
     "references": [
-        "GUID:c0804ed15043844c0a9296ff2a90b7e0"
+        "GUID:c0804ed15043844c0a9296ff2a90b7e0",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
