--- a/Assets/Scripts/MadKnight.asmdef
+++ b/Assets/Scripts/MadKnight.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "MadKnight",
     "references": [
         "GUID:c0804ed15043844c0a9296ff2a90b7e0",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
